// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel desktop className 1`] = `
<div
  className="YpcCarousel Test"
>
  <div
    className="YpcRadioGroup YpcCarousel-RadioGroup"
    onChange={[Function]}
    role="radiogroup"
  >
    <div
      className="YpcRadioGroup-Item YpcRadioGroup-Item_checked"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcBankCard YpcBankCard_view_vertical YpcBankCard_size_compact YpcCarousel-RadioGroupItem"
      >
        <div
          className="YpcBankCard-Icons"
        >
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
          />
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
          />
        </div>
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Mastercard
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_vertical YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              5643
            </span>
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={true}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x5643"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcBankCard YpcBankCard_view_vertical YpcBankCard_size_compact YpcCarousel-RadioGroupItem"
      >
        <div
          className="YpcBankCard-Icons"
        >
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
          />
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
          />
        </div>
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Visa
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_vertical YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              2007
            </span>
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x2007"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcNewBankCard YpcNewBankCard_view_vertical YpcCarousel-RadioGroupItem"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon YpcNewBankCard-Icon_view_vertical"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Добавить карту
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="new_card"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Carousel desktop methodId & methods 1`] = `
<div
  className="YpcCarousel"
>
  <div
    className="YpcRadioGroup YpcCarousel-RadioGroup"
    onChange={[Function]}
    role="radiogroup"
  >
    <div
      className="YpcRadioGroup-Item YpcRadioGroup-Item_checked"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcBankCard YpcBankCard_view_vertical YpcBankCard_size_compact YpcCarousel-RadioGroupItem"
      >
        <div
          className="YpcBankCard-Icons"
        >
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
          />
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
          />
        </div>
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Mastercard
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_vertical YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              5643
            </span>
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={true}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x5643"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcCarousel-RadioGroupItem"
      >
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Кастомный метод 1
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="custom-method-1"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcNewBankCard YpcNewBankCard_view_vertical YpcCarousel-RadioGroupItem"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon YpcNewBankCard-Icon_view_vertical"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Добавить карту
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="new_card"
        />
      </label>
    </div>
  </div>
  <div
    className="YpcSelect YpcCarousel-Select"
  >
    <button
      aria-haspopup="listbox"
      className="YpcButton YpcSelect-Button"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      Другие способы оплаты
    </button>
    <ul
      className="YpcMenu YpcSelect-Menu"
      hidden={true}
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="listbox"
      tabIndex={-1}
    >
      <li
        className="YpcMenu-Item"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        onPress={[Function]}
        onTouchStart={[Function]}
        role="option"
        tabIndex={-1}
      >
        <article
          className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
        >
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
          />
          <div
            className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
          >
            <h4
              className="YpcPaymentMethod-Name"
            >
              Visa
            </h4>
            <h4
              className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
            >
              <span
                className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
              >
                2007
              </span>
            </h4>
          </div>
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
          />
        </article>
      </li>
      <li
        className="YpcMenu-Item"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        onPress={[Function]}
        onTouchStart={[Function]}
        role="option"
        tabIndex={-1}
      >
        <article
          className="YpcPaymentMethod YpcPaymentMethod_view_horizontal"
        >
          <div
            className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
          >
            <h4
              className="YpcPaymentMethod-Name"
            >
              Кастомный метод 2
            </h4>
          </div>
        </article>
      </li>
      <li
        className="YpcMenu-Item"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        onPress={[Function]}
        onTouchStart={[Function]}
        role="option"
        tabIndex={-1}
      >
        <article
          className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
        >
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
          />
          <div
            className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
          >
            <h4
              className="YpcPaymentMethod-Name"
            >
              <div
                className="YpcFamilyCard-Name"
              >
                Семейная
              </div>
            </h4>
            <div
              className="YpcFamilyCard-Balance"
            >
              RUB 1,500 доступно
            </div>
          </div>
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
          />
        </article>
      </li>
      <li
        className="YpcMenu-Item YpcMenu-Item_disabled"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        onPress={[Function]}
        onTouchStart={[Function]}
        role="option"
      >
        <article
          className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
        >
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_height_s YpcIcon_name_vtb-bank YpcIcon_width_xl YpcBankIcon"
          />
          <div
            className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
          >
            <h4
              className="YpcPaymentMethod-Name"
            >
              MIR
            </h4>
            <h4
              className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
            >
              <span
                className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
              >
                2411
              </span>
            </h4>
          </div>
          <i
            aria-hidden={true}
            className="YpcIcon YpcIcon_name_mir-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
          />
        </article>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel touch-phone className 1`] = `
<div
  className="YpcCarousel Test"
>
  <div
    className="YpcRadioGroup YpcCarousel-RadioGroup"
    onChange={[Function]}
    role="radiogroup"
  >
    <div
      className="YpcRadioGroup-Item YpcRadioGroup-Item_checked"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Mastercard
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              5643
            </span>
          </h4>
        </div>
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
        />
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={true}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x5643"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Visa
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              2007
            </span>
          </h4>
        </div>
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
        />
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x2007"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Добавить карту
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="new_card"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Carousel touch-phone methodId & methods 1`] = `
<div
  className="YpcCarousel"
>
  <div
    className="YpcRadioGroup YpcCarousel-RadioGroup"
    onChange={[Function]}
    role="radiogroup"
  >
    <div
      className="YpcRadioGroup-Item YpcRadioGroup-Item_checked"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Mastercard
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              5643
            </span>
          </h4>
        </div>
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
        />
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={true}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x5643"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod"
      >
        <div
          className="YpcPaymentMethod-Content"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Кастомный метод 1
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="custom-method-1"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Visa
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              2007
            </span>
          </h4>
        </div>
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
        />
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x2007"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod"
      >
        <div
          className="YpcPaymentMethod-Content"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Кастомный метод 2
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="custom-method-2"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Семейная
          </h4>
          <div
            className="YpcFamilyCard-Balance"
          >
            RUB 1,500 доступно до конца месяца
          </div>
        </div>
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
        />
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x1234"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item YpcRadioGroup-Item_disabled"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_height_s YpcIcon_name_vtb-bank YpcIcon_width_xl YpcBankIcon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            MIR
          </h4>
          <h4
            className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
          >
            <span
              className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
            >
              2411
            </span>
          </h4>
        </div>
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_mir-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
        />
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          disabled={true}
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="card-x2411"
        />
      </label>
    </div>
    <div
      className="YpcRadioGroup-Item"
    >
      <article
        className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal"
      >
        <i
          aria-hidden={true}
          className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon"
        />
        <div
          className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
        >
          <h4
            className="YpcPaymentMethod-Name"
          >
            Добавить карту
          </h4>
        </div>
      </article>
      <label
        className="YpcRadioGroup-Label"
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
      >
        <input
          checked={false}
          className="YpcRadioGroup-Control"
          name="ypc-radio-group"
          readOnly={true}
          type="radio"
          value="new_card"
        />
      </label>
    </div>
  </div>
</div>
`;
